--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,26 @@
-<h1>TYT</h1>
-<p>This site is amazing</p>
+<nav class="navbar navbar-light bg-faded">
+    <div class="container">
+        <div class="navbar-header">
+            <h1>TYT</h1>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right main-nav">
+                <li>
+                    <a href="/programs">Programs</a>
+                </li>
+                <li>
+                    <a href="/history">History</a>
+                </li>
+                <li>
+                    <a href="/gallery">Gallery</a>
+                </li>
+                <li>
+                    <a href="/donate">Donate</a>
+                </li>
+                <li>
+                    <a href="/contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
