--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
       <div class="header-top">
         <div class="container">
             <div class="logo">
-              <a href="index.html"><img src="images/logo.png" alt=""/></a>
+              <a href="index.html"><img class="logo" src="assets/logo-mini.png" alt=""/></a>
             </div>
             <div class="menu">
               <a class="toggleMenu" href="#"><img src="images/nav_icon.png" alt="" /></a>
