started to move over content from current site

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -244,7 +244,7 @@ h3.m_1{
 }
 p.m_2{
     color:#fff;
-    font-size:14px;
+    font-size:20px;
     line-height:1.5em;
 }
 /*--portfolio--*/
@@ -544,7 +544,7 @@ p.m_9{
 }
 .join{
     width: 100%;
-    background: url(../images/join_bg.jpg) no-repeat;
+    background: #515f67;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -644,7 +644,7 @@ span.m_13{
 /*--contact--*/
 .contact{
     width: 100%;
-    background: url(../images/footer_bg.jpg) no-repeat;
+    background: #4bcaff;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
