--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,27 +31,13 @@
 <div class="services" id="services">
   <div class="container">
       <div class="row">
-          <h3 class="m_3">Services</h3>
+          <h3 class="m_3">OUR MISSION</h3>
           <div class="m_4"><span class="bottom_line"> </span></div>
-          <div class="col-md-3 top_grid">
-              <i class="coffee"> </i>
-              <h3 class="m_1">Coffee</h3>
-              <p class="m_2">Lorem ipsum dolor sit amet adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat..</p>
-          </div>
-          <div class="col-md-3 top_grid">
-              <i class="instant"> </i>
-              <h3 class="m_1">Instant</h3>
-              <p class="m_2">Lorem ipsum dolor sit amet adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat..</p>
-          </div>
-          <div class="col-md-3 top_grid">
-              <i class="advisor"> </i>
-              <h3 class="m_1">Serious</h3>
-              <p class="m_2">Lorem ipsum dolor sit amet adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat..</p>
-          </div>
-          <div class="col-md-3 top_grid1">
-              <i class="frame"> </i>
-              <h3 class="m_1">Frame</h3>
-              <p class="m_2">Lorem ipsum dolor sit amet adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat..</p>
+          <div class="col-md-12 top_grid">
+              
+              <p class="m_2">We are a registered charity giving young people (ages 14-20) the opportunity to explore and to reach their creative potential through a quality theatre arts experience. 
+
+              The Youth Theatre endeavors to lead in unlocking the creative potential, confidence and self-development of young people through performance and the theatre process.</p>
           </div>
       </div>
   </div>
@@ -62,7 +48,7 @@
   <div class="container"> 
           <div class="portfolio_top">
               <div class="portfolio_left">
-                <h3 class="m_5">Portfolio</h3>
+                <h3 class="m_5">Current Programmes</h3>
                 <div class="m_6"><span class="portfolio_line"> </span></div>
               </div>
     <div class="sap_tabs">
@@ -299,7 +285,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 default_top">
-          <h3 class="m_21">Just Default Section</h3>
+          <h3 class="m_21">Gallery</h3>
           <div class="m_22"><span class="default_line"> </span></div>
           <p class="m_7">aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie </p>
           <p class="m_7">aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie </p>
@@ -316,7 +302,7 @@
  <div class="twitter">
   <div class="container">
     <div class="twitter_left">
-      <h3 class="m_21">Just Default Section</h3>
+      <h3 class="m_21">History</h3>
           <div class="m_22"><span class="default_line"> </span></div>
     </div>
     <i class="icon_twitter"> </i>
@@ -329,7 +315,7 @@
 <div class="join">
   <div class="container">
       <div class="row">
-          <h3 class="m_3">Who is Jphn Doe?</h3>
+          <h3 class="m_3">Donate</h3>
             <div class="m_4"><span class="bottom_line"> </span></div>
           <div class="col-md-6 join_left">
             <p class="m_10">aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie </p>
@@ -347,21 +333,7 @@
       </div>
   </div>
 </div>
-<!--end join-->>
-<!--start testimonials-->
-<div class="testimonials">
-  <div class="container">
-      <div class="portfolio_left">
-          <h3 class="m_5">Testimonials</h3>
-          <div class="m_6"><span class="portfolio_line"> </span></div>
-      </div>
-      <i class="quotation"> </i>
-      <div class="clear"> </div>
-      <p class="m_12">aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit</p>
-      <span class="m_13">-quis nostrud volutpat</span>
-  </div>
-</div>
-<!--end testimonials-->
+<!--end join-->
 <!--start contact-->
 <div class="contact" id="contact">
   <div class="container">
