--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,7 +45,7 @@ body a{
 }
 .header{
     width: 100%;
-    background: url(../images/banner_bg.jpg) no-repeat;
+    background: url(/assets/tyt-scene.jpg) no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
