--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,18 +1,18 @@
 <!--start header-->
 <div class="header">
-<div class="header-top">
+<img src="/assets/tyt-scene.jpg" class="tyt-scene">
+<div class="header-top navbar-fixed-top">
   <div class="container">
       <div class="logo">
         <a href="index.html"><img class="logo" src="assets/logo-mini.png" alt=""/></a>
       </div>
       <div class="menu">
-        <a class="toggleMenu" href="#"><img src="images/nav_icon.png" alt="" /></a>
+        <a class="toggleMenu" href="#"><img src="assets/menu-white.png" alt="" /></a>
           <ul class="nav" id="nav">
-             <li><a href="#home" class="scroll">Our Mission</a></li>
-             <li><a href="#services" class="scroll">Programs</a></li>
-             <li><a href="#features" class="scroll">Gallery</a></li>
-             <li><a href="#features" class="scroll">History</a></li>
-             <li><a href="#portfolio" class="scroll">Donate</a></li>
+             <li><a href="#mission" class="scroll">Our Mission</a></li>
+             <li><a href="#programmes" class="scroll">Programmes</a></li>
+             <li><a href="#history" class="scroll">History</a></li>
+             <li><a href="#donate" class="scroll">Donate</a></li>
              <li><a href="#contact" class="scroll">Contact</a></li>                               
              <div class="clear"></div>
           </ul>
@@ -28,7 +28,7 @@
 </div>
 <!--end header-->
 <!--start services-->
-<div class="services" id="services">
+<div class="services" id="mission">
   <div class="container">
       <div class="row">
           <h3 class="m_3">OUR MISSION</h3>
@@ -44,16 +44,17 @@
 </div>
 <!--end services-->
 <!--start portfolio-->
-<div class="Portfolio1" id="portfolio">
+<div class="Portfolio1" id="programmes">
   <div class="container"> 
           <div class="portfolio_top">
               <div class="portfolio_left">
-                <h3 class="m_5">Current Programmes</h3>
-                <div class="m_6"><span class="portfolio_line"> </span></div>
+                <h3 class="m_5" style="color:#ffffff;">Current Programmes</h3>
+                <div class="m_4"><span class="bottom_line" style="margin:0px;"> </span></div>
               </div>
+          </div>
               <br>
-            <div class="row">
-              <div class="col-sm-6 col-md-4">
+            <div class="col-md-12 top_grid">
+              <div class="col-sm-12 col-md-4 program">
                 <div class="thumbnail">
                   <img src="/assets/thirteen.jpg" alt="Thirteen, the Musical">
                   <div class="caption">
@@ -63,7 +64,7 @@
                   </div>
                 </div>
               </div>  
-              <div class="col-sm-6 col-md-4">
+              <div class="col-sm-12 col-md-4 program">
                 <div class="thumbnail">
                   <img src="/assets/sweeneytodd.jpg" alt="Sweeney Todd">
                   <div class="caption">
@@ -73,7 +74,7 @@
                   </div>
                 </div>
               </div>  
-              <div class="col-sm-6 col-md-4">
+              <div class="col-sm-12 col-md-4 program">
                 <div class="thumbnail">
                   <img src="/assets/wicked.png" alt="Wicked">
                   <div class="caption">
@@ -84,33 +85,14 @@
                 </div>
               </div>  
             </div>
-          </div>
     </div><!-- container -->
  </div>
 </div>
 </div>
 </div>
  <!--end portfolio-->
- <!--start default-->
- <div class="default" id="features">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 default_top">
-          <h3 class="m_21">Gallery</h3>
-          <div class="m_22"><span class="default_line"> </span></div>
-          <p class="m_7">aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie </p>
-          <p class="m_7">aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie </p>
-          <div class="button"><a href="#">Visit Me</a></div>
-      </div>
-      <div class="col-md-6 video_player">
-          <iframe src="//player.vimeo.com/video/1785993?color=ffffff" width="100%" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/1785993"></a> <a href="http://vimeo.com/keithloutit"></a> <a href="https://vimeo.com"></a>.</p>
-      </div>
-    </div>
-  </div>
- </div>
- <!--end default-->
  <!--start twitter-->
- <div class="twitter">
+ <div class="history" id="history">
   <div class="container">
     <div class="twitter_left">
       <h3 class="m_21">History</h3>
@@ -123,7 +105,7 @@
 </div>
 <!--end twitter-->
 <!--start join-->
-<div class="join">
+<div class="donate" id="donate">
   <div class="container">
       <div class="row">
           <h3 class="m_3">Donate</h3>
@@ -192,7 +174,6 @@ Adeen also served as the Senior Arts Advisor for West London schools and college
       <ul class="footer-nav">
           <li><a href="#home" class="scroll">Our Mission</a></li> |
              <li><a href="#services" class="scroll">Programs</a></li> |
-             <li><a href="#features" class="scroll">Gallery</a></li> |
              <li><a href="#features" class="scroll">History</a></li> |
              <li><a href="#portfolio" class="scroll">Donate</a></li> |
              <li><a href="#contact" class="scroll">Contact</a></li>
