--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -59,8 +59,7 @@
                   <img src="/assets/thirteen.jpg" alt="Thirteen, the Musical">
                   <div class="caption">
                     <h3>Thirteen the musical</h3>
-                    <p>Description goes here...</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+                    <p><div class="button"><a href="#">More Info</a></div></p>
                   </div>
                 </div>
               </div>  
@@ -69,8 +68,7 @@
                   <img src="/assets/sweeneytodd.jpg" alt="Sweeney Todd">
                   <div class="caption">
                     <h3>Sweeney Todd</h3>
-                    <p>Description goes here...</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+                    <p><div class="button"><a href="#">More Info</a></div></p>
                   </div>
                 </div>
               </div>  
@@ -79,8 +77,7 @@
                   <img src="/assets/wicked.png" alt="Wicked">
                   <div class="caption">
                     <h3>Wicked / Wizard of OZ</h3>
-                    <p>Description goes here...</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+                    <p><div class="button"><a href="#">More Info</a></div></p>
                   </div>
                 </div>
               </div>  
