--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,7 +66,7 @@ body a{
 }
 .header-top{
     background: rgba(73, 84, 91, 0.84);
-    padding: 3% 0;
+    padding: 10px 0;
 }
 .logo{
     float:left;
