--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -59,7 +59,7 @@
                   <img src="/assets/thirteen.jpg" alt="Thirteen, the Musical">
                   <div class="caption">
                     <h3>Thirteen the musical</h3>
-                    <p><div class="button"><a href="#">More Info</a></div></p>
+                    <p><div class="button"><a data-toggle="modal" data-target="#myModal" href="#">More Info</a></div></p>
                   </div>
                 </div>
               </div>  
@@ -87,8 +87,30 @@
 </div>
 </div>
 </div>
- <!--end portfolio-->
- <!--start twitter-->
+<!--end portfolio-->
+<!--start modals-->
+
+<div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+<!--end modals-->
+<!--start twitter-->
  <div class="history" id="history">
   <div class="container">
     <div class="twitter_left">
