--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 <div class="header-top navbar-fixed-top">
   <div class="container">
       <div class="logo">
-        <a href="index.html"><img class="logo" src="assets/logo-mini.png" alt=""/></a>
+        <a href="index.html"><h1 style="font-family: Silver; color: #ffffff;">TYT</h1></a>
       </div>
       <div class="menu">
         <a class="toggleMenu" href="#"><img src="assets/menu-white.png" alt="" /></a>
@@ -22,8 +22,8 @@
      </div>
    </div>
    <div class="header-bottom" id="home">
-     <h1>BE BOLD</h1>
-     <h2>PUSH BOUNDARIES</h2>
+     <h1>Toronto Youth Theatre</h1>
+     <h2>Toronto Youth Teatre</h2>
    </div>
 </div>
 <!--end header-->
@@ -59,7 +59,7 @@
                   <img src="/assets/thirteen.jpg" alt="Thirteen, the Musical">
                   <div class="caption">
                     <h3>Thirteen the musical</h3>
-                    <p><div class="button"><a data-toggle="modal" data-target="#myModal" href="#">More Info</a></div></p>
+                    <p><div class="button"><a data-toggle="modal" data-target="#thirteenModal" href="#">More Info</a></div></p>
                   </div>
                 </div>
               </div>  
@@ -68,7 +68,7 @@
                   <img src="/assets/sweeneytodd.jpg" alt="Sweeney Todd">
                   <div class="caption">
                     <h3>Sweeney Todd</h3>
-                    <p><div class="button"><a href="#">More Info</a></div></p>
+                    <p><div class="button"><a data-toggle="modal" data-target="#sweeneyModal" href="#">More Info</a></div></p>
                   </div>
                 </div>
               </div>  
@@ -77,7 +77,7 @@
                   <img src="/assets/wicked.png" alt="Wicked">
                   <div class="caption">
                     <h3>Wicked / Wizard of OZ</h3>
-                    <p><div class="button"><a href="#">More Info</a></div></p>
+                    <p><div class="button"><a data-toggle="modal" data-target="#wickedModal" href="#">More Info</a></div></p>
                   </div>
                 </div>
               </div>  
@@ -90,12 +90,46 @@
 <!--end portfolio-->
 <!--start modals-->
 
-<div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+<div id="thirteenModal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Modal title</h4>
+        <h4 class="modal-title">Thirteen The Musical</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<div id="sweeneyModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Sweeney Todd</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<div id="wickedModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">The Wizard of Oz / Wicked</h4>
       </div>
       <div class="modal-body">
         <p>One fine body&hellip;</p>
@@ -160,7 +194,7 @@
               </div>
               <div class="col-md-6 commentform_desc">
                   <div class="address">
-                   <h3 style="color:#ffffff;">Adeen Ashton | Director</h3>
+                   <h3 style="color:#ffffff;">Adeen Ashton | Artistic Director</h3>
                    <p>Phone: (416) 915-6747</p>
                    <p>Email: <a href="mailto:adeen.TYT@gmail.com"><span>adeen.TYT@gmail.com</span></a></p>
                   </div>
