--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <!--start header-->
 <div class="header">
-<img src="/assets/tyt-scene.jpg" class="tyt-scene">
+<img src="/assets/tyt-scene.jpg" id="tyt-scene" class="tyt-scene">
+<img src="/assets/tyt-lines.jpg" id="tyt-lines" class="tyt-scene" style="display:none;">
 <div class="header-top navbar-fixed-top">
   <div class="container">
       <div class="logo">
@@ -13,7 +14,7 @@
              <li><a href="#programmes" class="scroll">Programmes</a></li>
              <li><a href="#history" class="scroll">History</a></li>
              <li><a href="#donate" class="scroll">Donate</a></li>
-             <li><a href="#contact" class="scroll">Contact</a></li>                               
+             <li><a href="#contact" class="scroll">Connect</a></li>                               
              <div class="clear"></div>
           </ul>
       </div>                          
@@ -22,8 +23,13 @@
      </div>
    </div>
    <div class="header-bottom" id="home">
-     <h1>Toronto Youth Theatre</h1>
-     <h2>Toronto Youth Teatre</h2>
+    <p>
+     <span class="title">Toronto Youth Theatre</span>
+    </p>
+     <br>
+     <p>
+     <span class="subtitle">BE BOLD, PUSH BOUNDARIES!</span>
+   </p>
    </div>
 </div>
 <!--end header-->
@@ -35,9 +41,9 @@
           <div class="m_4"><span class="bottom_line"> </span></div>
           <div class="col-md-12 top_grid">
               
-              <p class="m_2">We are a registered charity giving young people (ages 14-20) the opportunity to explore and to reach their creative potential through a quality theatre arts experience. 
-
-              The Youth Theatre endeavors to lead in unlocking the creative potential, confidence and self-development of young people through performance and the theatre process.</p>
+              <p class="m_2">We are a registered charity giving young people (ages 14-20) the opportunity to explore and to reach their creative potential through a quality theatre arts experience.</p>
+              <br>
+              <p class="m_2">The Youth Theatre endeavors to lead in unlocking the creative potential, confidence and self-development of young people through performance and the theatre process.</p>
           </div>
       </div>
   </div>
@@ -151,9 +157,10 @@
       <h3 class="m_21">History</h3>
           <div class="m_22"><span class="default_line"> </span></div>
     </div>
-    <i class="icon_twitter"> </i>
     <div class="clear"></div>
-    <p class="m_9">Since 2005 the Toronto Youth Theatre has striven to produce uncompromising theatre with young actors. Today, with more than 25 shows under our belts we have positioned ourselves as Toronto's premiere youth theatre. Rehearsing and performing in the professional theatre company space of LOT, TYT provides a professional experience to young actors in all aspects of production.</p>
+    <p class="m_9">Since 2005 the Toronto Youth Theatre has striven to produce uncompromising theatre with young actors. Today, with more than 25 shows under our belts we have positioned ourselves as Toronto's premiere youth theatre.</p>
+    <br>
+    <p class="m_9">Rehearsing and performing in the professional theatre company space of LOT, TYT provides a professional experience to young actors in all aspects of production.</p>
   </div>
 </div>
 <!--end twitter-->
@@ -181,17 +188,8 @@
 <div class="contact" id="contact">
   <div class="container">
       <div class="row">
-          <h3 class="m_3">Contact</h3>
+          <h3 class="m_3">Connect</h3>
           <div class="m_4"><span class="bottom_line"> </span></div>
-            <form>
-              <div class="col-md-6 commentform">
-                <p class="comment-form-author"><label for="author">Name</label>
-                  <input id="author" name="author" type="text" value="" size="30" aria-required="true">
-                </p>
-                 <p><label for="author">Email</label>
-                  <input id="author" name="author" type="text" value="" size="30" aria-required="true">
-                </p>
-              </div>
               <div class="col-md-6 commentform_desc">
                   <div class="address">
                    <h3 style="color:#ffffff;">Adeen Ashton | Artistic Director</h3>
@@ -200,25 +198,20 @@
                   </div>
                   <p class="m_13" style="padding-top:20px;">Adeen is the Artistic Director of the Toronto Youth Theatre. She has performed in numerous London West-End Musicals and she has regularly featured as a soloist on BBC Radio. Currently Adeen teaches voice at Sheridan College and performs in musicals at the Lower Ossington Theatre. </p>
                </div>
+              <div class="col-md-6 commentform">
+                <p class="comment-form-author">
+                  <a class="social-media facebook-link" href="https://www.facebook.com/TorontoYouthTheatre" target="_blank">
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                  </a>
+                  <a class="social-media youtube-link" href="https://www.youtube.com/user/torontoyouththeatre" target="_blank">
+                    <i class="fa fa-youtube-square" aria-hidden="true"></i>
+                  </a>
+                  <a class="social-media email-link" href="mailto:adeen.TYT@gmail.com">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                  </a>
+                </p>
+              </div>
                <div class="clear"></div>
-               <div class="contactform_bottom">
-                 <span><label>Subject</label></span>
-                 <span><textarea name="userMsg"> </textarea></span>
-                 <input type="submit" value="Message">
-               </div>
-               <div class="col-md-6 commentform_desc1">
-                  <p class="m_13">Adeen has performed in numerous London West-End Musicals including ‘Les Miserables’, ‘Oliver’, ‘Whistle Down the Wind’ (Lloyd-Webber) ‘the Rocky Horror Show’ and she has regularly featured as a soloist on BBC Radio. She was vocal coach on the BBC Reality TV Series “Get Your Act Together” and has coached students in acting and singing at many London Performing Arts Colleges, Conservatoires and Universities. (Including the Italia Conti Academy of Theatre Arts, Middlesex University, the Urdang Academy, Arts Educational Schools, the Academy of Live and Recorded Arts, the Actor’s Centre and Webber Douglas Academy).
- 
-Adeen also served as the Senior Arts Advisor for West London schools and colleges and was commissioned to compose numerous songs and concert productions including a song for the London 2012 Olympics. Currently Adeen teaches voice at Sheridan College and performs in musicals at the Lower Ossington Theatre. Adeen is the Artistic Director of the Toronto Youth Theatre</p>
-                 <div class="address">
-                   <p>500 Lorem Ipsum Dolor Sit,</p>
-                   <p>Phone:(00) 222 666 444</p>
-                  <p>Fax: (000) 000 00 00 0</p>
-                  <p>Email: <a href="mailto:info@example.com"><span>support[at]snow.com</span></a></p>
-                  <p>Follow on: <span>Facebook</span>, <span>Twitter</span></p>
-                  </div>
-               </div>
-              </form>
            </div>
      </div>
 </div>
@@ -226,8 +219,8 @@ Adeen also served as the Senior Arts Advisor for West London schools and college
   <div class="container">
       <ul class="footer-nav">
           <li><a href="#home" class="scroll">Our Mission</a></li> |
-             <li><a href="#services" class="scroll">Programs</a></li> |
              <li><a href="#features" class="scroll">History</a></li> |
+             <li><a href="#services" class="scroll">Programs</a></li> |
              <li><a href="#portfolio" class="scroll">Donate</a></li> |
              <li><a href="#contact" class="scroll">Contact</a></li>
       </ul>
@@ -248,14 +241,15 @@ Adeen also served as the Senior Arts Advisor for West London schools and college
           $(window).on('scroll', function(){
             var st = $(this).scrollTop();
 
-            var limit = 40;
+            var limit = 500;
 
             if(st <= limit){
-              $('.header-top').css('background-color', 'rgba(73, 84, 91, 1)');
-              //$('.header-top').css('background-color', 'rgba(73, 84, 91, '+(st/limit)+')');
+              $('#tyt-scene').show();
+              $('#tyt-lines').hide();
             }
             else{
-              $('.header-top').css('background-color', 'rgba(73, 84, 91, 1)');
+              $('#tyt-scene').hide();
+              $('#tyt-lines').show();
             }
           });
           
